# sitemap-rustico

./: .editorconfig  .gitignore  Cargo.toml  gen-articles.bat  gen-articles.sh  gen-book.bat  gen-book.sh  gen-home.bat  gen-home.sh  gen-merge.bat  gen-weekly.bat  gen-weekly.sh  generate.bat  generate.sh  readme.md  schema.xsd
.github/workflows/: generate.yml  test.yml
scripts/: gen-articles.bat  gen-book.bat  gen-book.sh  gen-dotnet.bat  gen-dotnet.sh  gen-home.bat  gen-home.sh  gen-weekly.bat
src/: main.rs
workflows/: blog.yml  webhook.yml
